--- a/index.html
+++ b/index.html
@@ -1,35 +1,62 @@
-
 <!DOCTYPE html>
 <html lang="az">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AnimeWatch - Ana Səhifə</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>Anime İlk Bölümlər - Brat Site</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #1e1e1e;
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+        h1 {
+            margin-bottom: 30px;
+        }
+        .video-container {
+            margin: 20px auto;
+            max-width: 640px;
+            border: 2px solid #444;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+        video, iframe {
+            width: 100%;
+            height: 360px;
+            background: black;
+        }
+        .title {
+            margin: 10px 0;
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>AnimeWatch</h1>
-        <nav>
-            <input type="text" id="searchBox" placeholder="Anime axtar..." />
-        </nav>
-    </header>
-    <main>
-        <section class="anime-list">
-            <article class="anime-card" data-name="Naruto">
-                <a href="anime.html?anime=naruto">
-                    <img src="img/naruto.jpg" alt="Naruto" />
-                    <h2>Naruto</h2>
-                </a>
-            </article>
-            <article class="anime-card" data-name="Demon Slayer">
-                <a href="anime.html?anime=demonslayer">
-                    <img src="img/demonslayer.jpg" alt="Demon Slayer" />
-                    <h2>Demon Slayer</h2>
-                </a>
-            </article>
-        </section>
-    </main>
-    <script src="js/script.js"></script>
+    <h1>Brat Anime İlk Bölümlər</h1>
+
+    <div class="video-container">
+        <div class="title">Naruto - 1-ci Bölüm</div>
+        <!-- YouTube embed -->
+        <iframe 
+          src="https://www.youtube.com/embed/xw7sDPsT7VQ" 
+          frameborder="0" 
+          allowfullscreen 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        ></iframe>
+    </div>
+
+    <div class="video-container">
+        <div class="title">Demon Slayer - 1-ci Bölüm</div>
+        <!-- YouTube embed -->
+        <iframe 
+          src="https://www.youtube.com/embed/k0fPMoXlPKA" 
+          frameborder="0" 
+          allowfullscreen 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        ></iframe>
+    </div>
 </body>
 </html>
